# qt-serialization-benchmark

./: CMakeLists.txt  README.md  qtserializationbenchmark.cpp  task_manager.h  task_manager.proto
